添加了商户界面

--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -12,6 +12,9 @@
         android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <com.scwang.smartrefresh.layout.header.ClassicsHeader
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <ListView
 
             android:id="@+id/listview"
@@ -21,3 +24,4 @@
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
 </LinearLayout>
+
