--- a/app/src/main/res/layout/activity_seller.xml
+++ b/app/src/main/res/layout/activity_seller.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#f8f8f8"
-    tools:context="com.diandian.pdd.diandiancha.login.SellerActivity">
+    tools:context="com.diandian.pdd.diandiancha.sellerview.SellerActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
