--- a/app/src/main/res/layout/activity_registr.xml
+++ b/app/src/main/res/layout/activity_registr.xml
@@ -109,11 +109,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_20"
-                android:minHeight="@dimen/dp_85"
                 android:gravity="top|left"
                 android:background="@drawable/edittext_input"
                 android:drawablePadding="@dimen/dp_5"
-                android:hint="用户简介概括"
+                android:hint="用户昵称/商户名称"
                 android:inputType="text"
                 android:maxWidth="@dimen/dp_200"
                 android:padding="@dimen/dp_10"
