--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="red">#ff0000</color>
-    <color name="whilt">#ffffff</color>
-    <color name="textColor">#2B2B2B</color>
+
+    <color name="color_useritem">#333333</color>
 </resources>
