--- a/app/src/main/res/layout/fragment_pager2.xml
+++ b/app/src/main/res/layout/fragment_pager2.xml
@@ -29,6 +29,7 @@
                 android:background="#ccc"
                 android:layout_height="@dimen/dp_0.5" />
 
+
             <ListView
                 android:layout_below="@+id/fenge"
                 android:id="@+id/listview"
@@ -36,6 +37,14 @@
                 android:layout_height="match_parent"
                 android:dividerHeight="@dimen/dp_0.5"
                 android:divider="#cccccc" />
+            <TextView
+                android:id="@+id/kong"
+                android:textSize="@dimen/sp_28"
+                android:textColor="#cccccc"
+                android:text="空的购物车"
+                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </RelativeLayout>
 
         <com.scwang.smartrefresh.layout.footer.ClassicsFooter
