--- a/app/src/main/res/layout/user_pager1_item.xml
+++ b/app/src/main/res/layout/user_pager1_item.xml
@@ -1,49 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_height="@dimen/dp_105"
     android:background="#ffffff"
-    android:layout_height="@dimen/dp_100">
+    android:padding="@dimen/dp_10">
+
     <ImageView
         android:id="@+id/item_image"
-        android:src="@mipmap/ic_launcher"
         android:layout_width="@dimen/dp_85"
-        android:layout_height="@dimen/dp_85" />
+        android:layout_height="@dimen/dp_85"
+        android:src="@mipmap/ic_launcher" />
+
     <TextView
         android:id="@+id/item_title"
         android:layout_width="wrap_content"
-        android:text="title"
-        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dp_15"
         android:layout_toRightOf="@+id/item_image"
+        android:text="title"
         android:textColor="#333333"
-        android:textSize="@dimen/sp_18"
-        android:layout_height="wrap_content" />
+        android:textSize="@dimen/sp_18" />
+
     <TextView
         android:id="@+id/item_seller"
-        android:layout_below="@+id/item_title"
         android:layout_width="wrap_content"
-        android:text="商家名字"
-        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/item_title"
+        android:layout_marginLeft="@dimen/dp_15"
         android:layout_toRightOf="@+id/item_image"
+        android:text="商家名字"
         android:textColor="#666666"
-        android:textSize="@dimen/sp_18"
-        android:layout_height="wrap_content" />
+        android:textSize="@dimen/sp_18" />
+
     <TextView
         android:id="@+id/item_price"
         android:layout_width="wrap_content"
-        android:text="￥20"
-        android:layout_marginLeft="@dimen/dp_10"
-        android:layout_toRightOf="@+id/item_image"
+        android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/item_image"
+        android:layout_marginLeft="@dimen/dp_15"
+        android:layout_toRightOf="@+id/item_image"
+        android:text="￥20"
         android:textColor="#F15141"
-        android:textSize="@dimen/sp_18"
-        android:layout_height="wrap_content" />
-    <ImageView
-        android:id="@+id/item_add"
+        android:textSize="@dimen/sp_18" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/dp_45"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="@dimen/dp_15"
-        android:src="@drawable/ic_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/item_less"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="@dimen/dp_5"
+            android:layout_toLeftOf="@+id/num"
+            android:src="@drawable/ic_less"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/item_add"
+            android:text="1"
+            android:textColor="#666666"
+            android:visibility="gone" />
+
+        <ImageView
+            android:padding="@dimen/dp_2"
+            android:id="@+id/item_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp_5"
+            android:src="@drawable/ic_add" />
+    </LinearLayout>
+
 
 </RelativeLayout>
