--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,17 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="color_useritem">#333333</color>
+
+    <color name="red">#ff0000</color>
+    <color name="whilt">#ffffff</color>
+    <color name="textColor">#2B2B2B</color>
+    <color name="tab_normal">#707070</color>
+    <color name="zhubackground">#f1f1f1</color>
+    <color name="hinttextcolor">#898989</color>
+    <color name="maincolor">#FF4081</color>
+    <color name="maincolor_normal">#9e2d54</color>
+
+    <color name="black_alpha">#22000000</color>
+    <color name="alpha">#00000000</color>
+    <color name="black">#000000</color>
 </resources>
